cloudformation/instances.template
AWSTemplateFormatVersion: "2010-09-09"
Description: sixodp application infrastructure

Parameters:
  EnvironmentName:
    Type: String
    Default: infratest
    AllowedValues:
      - infratest
      - generic-dev
      - generic-qa
      - generic-prod
      - turku-qa
  InstanceType:
    Description: EC2 instance type for the application servers
    Type: String
    Default: t2.small
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium
    ConstraintDescription: "Must be one of the following EC2 instance types: t2.micro, t2.small, t2.medium"
  DatabaseSecurityGroup:
    Description: Security group of the RDS database
    Type: AWS::EC2::SecurityGroup::Id
    MinLength: 1
  EFSSecurityGroup:
    Description: Security group of the EFS filesystem
    Type: AWS::EC2::SecurityGroup::Id
    MinLength: 1
  HostedZoneId:
    Description: Zone ID for the DNS record
    Type: AWS::Route53::HostedZone::Id
    Default: Z3MUEH1DAIWOFS
    MinLength: 1
  WhitelistedIpAddress:
    Type: String
    Default: 193.64.225.83/32
    MinLength: 1

Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: ami-0d77397e # Ubuntu Server 16.04 LTS (HVM), SSD Volume Type
      KeyName: sixodp-omni
      IamInstanceProfile: !Ref InstanceProfile
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      BlockDeviceMappings: 
        - DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            VolumeSize: 20
            DeleteOnTermination: true
      Tags:
        - Key: Name
          Value: !Sub sixodp-${EnvironmentName}
      UserData: !Base64
        "Fn::Sub": |
          #!/bin/bash

          apt-get update
          apt-get -y dist-upgrade
          apt-get -y install libssl-dev libffi-dev python-dev python-pip git
          pip install pip setuptools --upgrade
          pip install awscli ansible markupsafe docker-py==1.9.0

          cd /root
          git clone https://github.com/6aika/sixodp-infra.git
          git clone https://github.com/6aika/sixodp.git

          cd /root/sixodp-infra/bootstrap
          ansible-playbook -i localhost, deploy.yml

          cd /root/sixodp
          git submodule update --init --recursive

          aws s3 cp s3://sixodp-secrets/${EnvironmentName}/secrets.yml /root/sixodp-secrets/${EnvironmentName}/secrets.yml
          chmod -R go-rwx /root/sixodp-secrets/*

          cd /root/sixodp/ansible
          ansible-playbook -i inventories/${EnvironmentName} deploy-transitional.yml

          echo "Bootstrap done."

  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP
      SecurityGroupIngress: 
        - FromPort: 22
          ToPort: 22
          IpProtocol: tcp
          CidrIp: !Ref WhitelistedIpAddress
        - FromPort: 80
          ToPort: 80
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
        - FromPort: 443
          ToPort: 443
          IpProtocol: tcp
          CidrIp: 0.0.0.0/0
        - FromPort: 8983
          ToPort: 8983
          IpProtocol: tcp
          CidrIp: !Ref WhitelistedIpAddress

  DatabaseIngressRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      GroupId: !Ref DatabaseSecurityGroup
      SourceSecurityGroupName: !Ref InstanceSecurityGroup

  MySQLDatabaseIngressRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      GroupId: !Ref DatabaseSecurityGroup
      SourceSecurityGroupName: !Ref InstanceSecurityGroup

  EFSIngressRule:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      FromPort: 2049
      ToPort: 2049
      GroupId: !Ref EFSSecurityGroup
      SourceSecurityGroupName: !Ref InstanceSecurityGroup

  ElasticAddress:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref EC2Instance

  DomainName:
    Type: AWS::Route53::RecordSet
    Properties:
      Name: !Sub ${EnvironmentName}.dataportaali.com.
      Type: A
      TTL: 300
      HostedZoneId: !Ref HostedZoneId
      ResourceRecords:
        - !Ref ElasticAddress

  InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action: sts:AssumeRole
            Principal:
              Service: ec2.amazonaws.com
      Policies:
        - PolicyName: Instance policies
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action: s3:GetObject
                Resource: !Sub "arn:aws:s3:::sixodp-secrets/${EnvironmentName}/*"
              - Effect: Allow
                Action: "*"
                Resource:
                  - !Sub "arn:aws:s3:::sixodp-${EnvironmentName}-datasets"
                  - !Sub "arn:aws:s3:::sixodp-${EnvironmentName}-datasets/*"

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref InstanceRole

Outputs:
  InstanceId:
    Value: !Ref EC2Instance
  PublicDNS:
    Value: !GetAtt EC2Instance.PublicDnsName
  SiteURL:
    Value: !Sub https://${EnvironmentName}.dataportaali.com
  AZ:
    Value: !GetAtt EC2Instance.AvailabilityZone
  PublicIP:
    Value: !GetAtt EC2Instance.PublicIp
